--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 .layout {
 
-    background-color: rgb(164, 220, 230);
-    width: 80%;
-    height: 100vh;
+    background-color: rgb(216, 230, 233);
+    width: 80vw;
+    height: 90vh;
     margin: 0 auto;
 
 
@@ -17,9 +17,9 @@
 
 header {
     background-color: aquamarine;
-    border: 1px solid;
+    
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-left: 15px;
 }
@@ -33,24 +33,20 @@ header nav {
 header nav ul {
     width: 80%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-between;
     list-style: none;
     padding: 0;
-
+    
 }
 
 .header {
-    background-color: rgb(160, 159, 95);
-    border: 1px solid;
-
-
+    background-color: rgb(203, 219, 229);
     grid-column: 1 / 7;
 
 }
 
 aside {
-    background-color: rgb(162, 206, 145);
-    border: 1px solid;
+    background-color: rgb(203, 219, 229);
 
     grid-column: 1 / 3;
     grid-row: 2 / 4;
@@ -60,36 +56,38 @@ aside {
 }
 
 section {
-    background-color: rgb(129, 187, 165);
-    border: 1px solid;
+    background-color: rgb(203, 219, 229);
     padding-left: 15px;
 
 }
 
 .section1 {
-    background-color: rgb(137, 129, 182);
-    border: 1px solid;
+    background-color: rgb(203, 219, 229);
     grid-column: 3 / 7;
 
 }
 
 .section2 {
-    background-color: rgb(78, 116, 106);
-    border: 1px solid;
+    background-color: rgb(203, 219, 229);
     grid-column: 3 / 5;
 
 }
 
 .section3 {
-    background-color: rgb(180, 128, 172);
-    border: 1px solid;
+    background-color: rgb(203, 219, 229);
     grid-column: 5 / 7;
 
 }
 
+.redes{
+    display:flex;
+    padding-left: 150px;
+    
+}
+
 footer {
-    background-color: cornflowerblue;
+    background-color: rgb(203, 219, 229);
     grid-column: 1 / 7;
-    border: 1px solid;
-    padding-left: 15px;
+    padding-top: 12%;
+
 }
